<resources>
    <string name="app_name">OXBET -  ĐẲNG CẤP - BÉT VIP2021</string>
    <string name="Open" />
    <string name="Close" />
    <string name="shootingfishtitle">BẮN CÁ</string>
    <string name="shootingfishdesc">    \t Bắn cá rất phổ biến ở các siêu thị, khu vui chơi, trung tâm mua sắm… Khác với chơi ở siêu thị, khu vui chơi, trung tâm mua sắm thì bạn cần phải nạp tiền mới có thể tham gia. game, tại OxBet bạn hoàn toàn có thể chơi Bắn cá miễn phí không chỉ chơi trên laptop, máy tính mà bạn có thể chơi game bắn cá 3D ngay trên điện thoại của mình. điện thoại di động của bạn. Hãy nhanh tay tham gia chơi game trên Game Vui Vẻ để có những phút giây giải trí đầy thú vị với game Ban Ca An xu nhé!</string>

    <string name="kenotitle">Keno</string>
    <string name="kenodesc">   \t là một trò chơi đánh bạc giống như xổ số thường được chơi tại các sòng bạc hiện đại và cũng được cung cấp như một trò chơi của một số con số xổ số.
\n\n
Người chơi sẽ chọn các số từ 1 đến (thường là) 80.  20 số (một số biến thể rút thăm ít hơn) được rút ngẫu nhiên hoặc bằng máy phát hành. Quả bóng tương tự như bóng ném được sử dụng để xổ số và chơi lô tô, hoặc với một bộ tạo số ngẫu nhiên.
\n\n
Mỗi sòng bạc thiết lập một bộ thanh toán riêng của mình, được gọi là "bảng thanh toán". Người chơi được trả tiền dựa trên số lượng các số được chọn (do người chơi hoặc thiết bị đầu cuối chọn), số lượng các số trùng với số được chỉ định và số tiền đặt cược.
\n\n
Có nhiều hình thức thanh toán keno tùy thuộc vào sòng bạc, thường có "tỷ lệ cược nhà cái" lớn hơn các trò chơi khác do sòng bạc đó cung cấp. Tỷ lệ nhà dao động từ dưới 4 phần trăm đến hơn 35 phần trăm. Tỷ lệ cược thông thường của nhà cái đối với các trò chơi sòng bạc không đánh bạc là dưới 5%.</string>

    <string name="nohutitle">Nổ hũ</string>
    <string name="nohudesc">    \t Bố cục tiêu chuẩn của một máy đánh bạc có màn hình hiển thị ba hoặc nhiều cuộn "quay" khi trò chơi bắt đầu. Một số Nổ hũ hiện đại vẫn bao gồm đòn bẩy như một tính năng thiết kế thực tế để kích hoạt trò chơi. Tuy nhiên, các nguyên tắc cơ học của những cỗ máy thời kỳ đầu đã được thay thế bởi những bộ tạo số ngẫu nhiên, và hầu hết chúng hiện nay đều sử dụng nút bấm và màn hình cảm ứng để vận hành.

        Nổ hũ bao gồm một hoặc nhiều máy dò tiền tệ có thể xác minh các phương thức thanh toán, bao gồm tiền xu, tiền mặt, chứng từ hoặc mã thông báo. Khi trục quay ngừng "quay", máy sẽ trả tiền theo mẫu biểu tượng được hiển thị.</string>


    <string name="hometitle">Giới thiệu về nhà cái Oxbet</string>
    <string name="homedesd">Oxbet là nhà cái đến từ Châu Âu. Với sự đầu tư bài bản và hiện đại, nhà cái này đã mang tới cho các tay chơi cá cược một sân chơi an toàn và thú vị. Hơn nữa, sự nỗ lực không ngừng nghỉ của Oxbet để mang đến chất lượng sản phẩm tốt nhất làm hài lòng khách hàng đã khiến nhà cái này thu hút đông đảo người tham gia. Nhà cái Oxbet đem tới cho người chơi đầy đủ và đa dạng các sản phẩm cá cược hấp dẫn như:
    \n\n
•  Cá cược thể thao
            \n\n
•  Casino trực tuyến
            \n\n
•  Number games
            \n\n
•  Keno
            \n\n
•  Bắn cá
            \n\n
•  Nổ hũ
            \n\n
•  Thể thao ảo
            \n\n
•  Lô đề…</string>

    <string name="title1">Lý do OxBet là nhà cái hàng đầu Châu Âu</string>
    <string name="desc1">\t Giữa vô vàn nhà cái trên thị trường cá cược trực tuyến hiện nay, Oxbet nổi lên khẳng định vị thế và giành lấy sự yên mến của người chơi. Nhà cái này có nhiều ưu điểm vượt trội về chất lượng sản phẩm, mức độ uy tín cũng như các khía cạnh nổi bật khác. Sau đây là những đặc điểm của Oxbet đang được mọi người quan tâm nhất hiện nay:</string>

    <string name="title2">Giao diện Oxbet.com độc đáo, thu hút</string>
    <string name="desc2">\t Thiết kế giao diện của Oxbet được đông đảo người chơi ủng hộ và đánh giá cao. Khi truy cập vào nhà cái người chơi sẽ thấy được thiết kế bài bản và hoàn hảo đến từng chi tiết. Với tông nền giao diện màu đen kết hợp với phông chữ màu vàng cam thu hút ánh nhìn của mọi tay chơi cá cược vào trải nghiệm.</string>

    <string name="desc2.1">\t Bố cục giao diện được thiết kế vô cùng gọn gàng và tiện lợi giúp cho việ trải nghiệm những trò chơi cá cược trực tuyến dễ dàng hơn. Hệ thống website của nhà cái tích hợp công nghệ cao giúp cho người chơi truy cập thuận tiện hơn. Hơn nữa, hệ thống ngôn ngữ mặc định là tiếng Việt nên người có thể tìm kiếm các sản phẩm dịch vụ nhanh chóng và dễ dàng hơn.</string>


</resources>