<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OxView.OxHome"
    android:layout_marginTop="55dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CCd4af37"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/hometitle"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/image1"
                android:scaleType="fitXY"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="left"
                android:text="@string/homedesd"
                android:textColor="#000000"
                android:textSize="13dp"
                android:textStyle="italic" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CCd4af37"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/title1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:textSize="13dp"
                android:textStyle="italic"
                android:text="@string/desc1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#CCd4af37"
        app:cardElevation="5dp"
        app:cardCornerRadius="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="15dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/title2"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/image2"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:textSize="13dp"
                android:textStyle="italic"
                android:text="@string/desc2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:textColor="#000000"
                android:layout_margin="5dp"
                android:textSize="13dp"
                android:textStyle="italic"
                android:text="@string/desc2.1"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
    </ScrollView>
</RelativeLayout>